--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 <body>
     <div class="bbb">
         <div class="power">
-            <h1>MAXMILLAN KUYA</h1><br><br>
-        </div> 
-         
+            <h1>IT'S MAXMILLAN KUYA</h1><br><br>
+        </div>     
+    </div>  
+    <div class="nnn">
+        <div class="vvv">
+            <h2>ABOUT ME</h2> <br><br><br>
+            <p><strong> I am aweb developer  from Nakuru county but currently based in Nairobi.<br>i have built several sites with the little knowledge i have from coding. <br>i am still trying to sharpen my skills hence decided to join a school to <br>expand my knowledge so as to be better on all this</strong></p>
+            <img src="./images/IMG_20210311_155810_115-removebg-preview (1).png" alt="image of a person" height="300px" width="300px">
+        </div>
     </div>
 </body>
 </html>
+ 
+    
