--- a/index.html
+++ b/index.html
@@ -20,6 +20,47 @@
             <img src="./images/IMG_20210311_155810_115-removebg-preview (1).png" alt="image of a person" height="300px" width="300px">
         </div>
     </div>
+    <div class="progs">
+        <h3>MY PROJECTS</h3>
+        <P>Below are some of my projects, a brief description about them and there active links.</P>
+        <div class="one">
+            <li> <a href="https://github.com/kuya-ui/favorite-band">favorite-band</a></li>
+            <P>A simple website that states about my best and favorite band, <br> also contains members of the group and their biography. <br>Also it has some of their musics with active link on them <br>and also my favorite albums from them.</P>
+            <p>it uses these programmes</p>
+            <li>HTML</li>
+            <li>CSS</li>
+        </div>
+        <div class="two">
+            <li> <a href="https://github.com/kuya-ui/Anitas-kitchen">Anitas-kitchen</a></li>
+            <p>About a hotel called Anitas kitches the best in town and all the delicasies they offer,<br> Describing also some of their happy clients and contact list to.</p>
+            <p>it uses these programmes</p>
+            <li>HTML</li>
+            <li>CSS</li>
+        </div>
+        <div class="three">
+            <li> <a href="https://github.com/kuya-ui/Hotel">Hotel</a></li>
+            <p> a simple site about a hotel and the services it offers</p>
+            <p>it uses these programmes</p>
+            <li>HTML</li>
+            <li>CSS</li>
+        </div>
+        <div class="four">
+            <li> <a href="https://github.com/kuya-ui/myPet">mypet</a></li>
+            <p>Talking about an animal orphanage but mostly <br> dealing with dogs and how people may adopt.</p>
+            <p>it uses these programmes</p>
+            <li>HTML</li>
+            <li>CSS</li>
+        </div>
+        <div class="five">
+            <li> <a href="https://github.com/kuya-ui/Dairy-business">Dairy-business</a></li>
+            <p>It's all about a dairy farm and the amount of milk they produce and a brief description about them.</p>
+            <p>it uses these programmes</p>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+              
+        </div>
+    </div>
 </body>
 </html>
  
