add job experience

--- a/index.html
+++ b/index.html
@@ -58,11 +58,22 @@
             <li>HTML</li>
             <li>CSS</li>
             <li>JS</li>
-              
         </div>
     </div>
     <div class="back">
-        <h4>EDUCATION</h4>
+        <div class="six">
+            <h4>EDUCATION</h4>
+            <p><strong>kiriri university</strong></p>
+            <p>diploma in bussiness information technology </p>
+            <p><strong>mamangina kenyattta secondary</strong></p>
+            <p>kenya certificate of secondary education</p>
+            <p><strong>angalo academy</strong></p>
+            <p>kenya certificate of primary education</p>
+        </div>
+        <div class="seven">
+            <h3>Job experience</h3>
+            <p>I have no job experience at the moment.</p>
+        </div>
     </div>
 </body>
 </html>
