add why the course

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <div class="seven">
             <h3>Job experience</h3>
             <p>I have no job experience at the moment.</p>
+            <h3>Why the course</h3>
+        <p>Having a little knowledge of the course from close friends i decided to do the course because the course is a fun one eventhough it has it's many challenges, and because i know it has high income potential and capabilities of opening my own job, and it has also opened my mind in problem solving skills.</p>
         </div>
     </div>
 </body>
