--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
         <p>Having a little knowledge of the course from close friends i decided to do the course because the course is a fun one eventhough it has it's many challenges, and because i know it has high income potential and capabilities of opening my own job, and it has also opened my mind in problem solving skills.</p>
         </div>
     </div>
+    <div class="all">
+        <div class="column">
+            <h4>Intrests</h4>
+            <ol>
+            <li>Cooking.</li>
+            <li>Nature.</li>
+            <li>Exercising.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
  
