--- a/index.html
+++ b/index.html
@@ -81,9 +81,14 @@
         <div class="column">
             <h4>Intrests</h4>
             <ol>
-            <li>Cooking.</li>
-            <li>Nature.</li>
-            <li>Exercising.</li>
+                <li>Cooking.</li>
+                <li>Nature.</li>
+                <li>Exercising.</li>
+            </ol>
+            <ol>
+                <li>Travelling.</li>
+                <li>Watching.</li>
+                <li>Reading.</li>
             </ol>
         </div>
     </div>
