--- a/index.html
+++ b/index.html
@@ -85,10 +85,17 @@
                 <li>Nature.</li>
                 <li>Exercising.</li>
             </ol>
+            <h4>Hobbies</h4>
             <ol>
                 <li>Travelling.</li>
                 <li>Watching.</li>
                 <li>Reading.</li>
+            </ol>
+            <h4>skills</h4>
+            <ol>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
             </ol>
         </div>
     </div>
