--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
                 <li>JS</li>
             </ol>
         </div>
+        <div class="cons">
+            <h1>CONTACTS</h1>
+            <P>You can reach me via</P>
+            <ol>
+                <li>0799929219</li>
+                <li>maxmillan.kuya@student.moringaschool.com</li>
+            </ol>
+        </div>
     </div>
 </body>
 </html>
