--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
                 <li>maxmillan.kuya@student.moringaschool.com</li>
             </ol>
         </div>
+        <div class="max">
+            <p>you can also reach me via these platforms</p>
+            <img src="./images/2.png" alt="">
+            <img src="./images/1.png" alt="">
+            <img src="./images/3.png" alt="">
+            <img src="./images/4.png" alt="">
+        </div>
     </div>
 </body>
 </html>
